Fix z-index for flipcard posts (with exif data)

--- a/Extensions/show_picture_size.css
+++ b/Extensions/show_picture_size.css
@@ -11,6 +11,7 @@
     background: rgba(0,0,0,.5);
     color: #eee;
     padding: 2px 4px;
+    z-index: 10;
 }
 
 .xkit-show-picture-size .post_media:hover .show-picture-size,
